--- a/me.html
+++ b/me.html
@@ -232,12 +232,12 @@ function closeNav() {
           <li><a href="https://zhoulingyu.net/faq.html">faq</a></li>
           <li><a href="https://blog.zhoulingyu.net">blog</a></li>
           <li><a href="fg.html">résumé</a></li>
-          <li><a href="#" onclick="javascript:navigator.share({title: 'Lingyu Zhou',text: 'Lingyu Zhou',url: 'https://zhoulingyu.net'})" >share</a></li>
           <li><a href="fg.html">gallery</a></li>
+          <li><a href="#" onclick="javascript:navigator.share({title: 'Lingyu Zhou',text: 'Lingyu Zhou',url: 'https://zhoulingyu.net'})" >share</a></li>
         </ul>
       </div>
 
-    <div class="nic" style="  line-height: 0.9;">Lingyu<br>Zhou</div>
+    <div class="nic" style="line-height: 0.9; cursor:default">Lingyu<br>Zhou</div>
 
 </body>
 
