--- a/fontcss.html
+++ b/fontcss.html
@@ -220,6 +220,16 @@ Then refer to the preview below for your preferred fonts and use corresponding a
     </tr>
 
     <tr>
+      <td><code onclick="copyTab(this)">chirp_r</code></td>
+      <td><span style="font-family:chirp_r;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+    </tr>
+
+    <tr>
+      <td><code onclick="copyTab(this)">chirp_m</code></td>
+      <td><span style="font-family:chirp_m;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+    </tr>
+
+    <tr>
       <td><code onclick="copyTab(this)">appletc</code></td>
       <td><span style="font-family:appletc;">通教育丑低快尖草,哥当支的反承上天币榜太，报谢量落厅时人的同躲尝，瞠仓。</span></td>
     </tr>
