--- a/zune.html
+++ b/zune.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://xolyn.github.io/font.css">
+    <title>about</title>
     <style>
-        @import url(https://db.onlinewebfonts.com/c/7ae49051ef02b5a95b5afdc79fdb9c90?family=Diagramatika+Text+Bold);
-        @import url(https://db.onlinewebfonts.com/c/9f98341ab90ec086eb7e80d64e621564?family=Neue+Haas+Grotesk+Disp+W01+65Md);
+@import url(https://db.onlinewebfonts.com/c/6e47ef470dd19698c911332a9b4d1cf4?family=Neue+Haas+Grotesk+Text+Pro);
+        ::selection{background-color: white; color:black}
         body{
             background-color:black;
             color:white;
             margin:0px;
             /* font-family: neue; */
-            font-family: "Diagramatika Text Bold";
+            font-family: dtb;
             font-size: 5vmin;
             padding-bottom: 10vh;
             -webkit-hyphens: auto;
@@ -21,12 +22,12 @@
             hyphens: auto;
         }
         a{
-            text-decoration-style:dashed;
+            text-decoration-style:underline;
             color:white;
         }
         a:hover{
-            text-decoration-style:none;
-            text-decoration:underline transparent;
+            /* text-decoration-style:none; */
+            /* text-decoration:underline transparent; */
             animation-name:blink;
             animation-duration:.5s;
             animation-timing-function:ease-in;
@@ -58,7 +59,7 @@
         </div>
 <br>
 <span style="color:white;font-size: 10vw; ">ABOUT</span><br>
-<div style="line-height: 1; font-family: 'Neue Haas Grotesk Disp W01 65Md';">
+<div style="line-height: 1.3; font-family: 'Neue Haas Grotesk Text Pro';">
     <p>My name is Lingyu Zhou. I am a <a href="https://khentmt.com">founder</a> as well as a student</a> at <a href="https://cornel.edu">Cornell University</a>, exploring the numbers and their connections behind.
         I also craft insightful data narratives from complex systems by blending applied mathematics and computer science technology.
         Previously, I studied applied mathematics at 
@@ -78,7 +79,8 @@
         I was a data operator at <a href="https://www.sino-technology.com/">Shanghai Sino Environmental Technology Co., Ltd</a>.
     </p>
 </div>
-    <!-- <a href="javascript:scroll(0,0)" style="text-decoration: none; color:white;"><div  style="width:100vw;  position: fixed; bottom: 0%; right:0%; margin-right: -3vw; margin-bottom: -4vh; text-align: right; font-size: 15vh;">TOP<span style=" border-radius: 99px; border: 8px white solid; padding: 0px 1.5vh 0px;">&uarr;</span></div> -->
+    <!-- <a href="javascript:scroll(0,0)" style="text-decoration: none; color:white; position: relative;">
+        <div  style="width:100vw; position: absolute; bottom: 0%; right:10%; margin-right: -3vw; margin-bottom: -4vh; text-align: right; font-size: 15vh;">TOP<span style=" border-radius: 99px; border: 8px white solid; padding: 0px 1.5vh 0px;">&uarr;</span></div> -->
 
 </body>
 </html>
