--- a/fontcss.html
+++ b/fontcss.html
@@ -59,6 +59,10 @@ code{
 
 code,pre{font-family: monospace;}
 
+input{ width: 98%; border:none;outline: none; border-color: transparent;
+}
+
+
 </style>
 
 
@@ -106,132 +110,133 @@ Then refer to the preview below for your preferred fonts and use corresponding a
   
     <tr>
       <td><code onclick="copyTab(this)">BDLifelessGrotesk</code></td>
-      <td><span style="font-family:BDLifelessGrotesk;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <!-- <td><span style="font-family:BDLifelessGrotesk;"></input></td> -->
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:BDLifelessGrotesk;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">CascadiaMono-Regular</code></td>
-      <td><span style="font-family:CascadiaMono-Regular;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:CascadiaMono-Regular;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">cour</code></td>
-      <td><span style="font-family:cour;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:cour;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">CourierPrime-Regular</code></td>
-      <td><span style="font-family:CourierPrime-Regular;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:CourierPrime-Regular;"></input></td>
     </tr>
   
     <!-- <tr>
       <td><code onclick="copyTab(this)">dtb</code></td>
-      <td><span style="font-family:dtb;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><span style="font-family:dtb;"></input></td>
     </tr>
    -->
     <tr>
       <td><code onclick="copyTab(this)">ere</code></td>
-      <td><span style="font-family:ere;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:ere;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Erewhon-Bold</code></td>
-      <td><span style="font-family:Erewhon-Bold;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:Erewhon-Bold;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">iom</code></td>
-      <td><span style="font-family:iom;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:iom;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Monolisa Font</code></td>
-      <td><span style="font-family:Monolisa Font;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:Monolisa Font;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Neue Kaine Variable</code></td>
-      <td><span style="font-family:Neue Kaine Variable;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:Neue Kaine Variable;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Neue Regrade Bold</code></td>
-      <td><span style="font-family:Neue Regrade Bold;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:Neue Regrade Bold;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">Neue Regrade Medium</code></td>
-      <td><span style="font-family:Neue Regrade Medium;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:Neue Regrade Medium;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">nhm</code></td>
-      <td><span style="font-family:nhm;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:nhm;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">nhr</code></td>
-      <td><span style="font-family:nhr;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:nhr;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sf-round</code></td>
-      <td><span style="font-family:sf-round;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:sf-round;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sf_b</code></td>
-      <td><span style="font-family:sf_b;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:sf_b;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sf_l</code></td>
-      <td><span style="font-family:sf_l;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:sf_l;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sf_r</code></td>
-      <td><span style="font-family:sf_r;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:sf_r;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">diag_r</code></td>
-      <td><span style="font-family:diag_r;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:diag_r;"></input></td>
     </tr>
 
     <tr>
       <td><code onclick="copyTab(this)">diag_b</code></td>
-      <td><span style="font-family:diag_b;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:diag_b;"></input></td>
     </tr>
 
     <tr>
       <td><code onclick="copyTab(this)">sig</code></td>
-      <td><span style="font-family:sig;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:sig;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sneak</code></td>
-      <td><span style="font-family:sneak;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:sneak;"></input></td>
     </tr>
   
     <tr>
       <td><code onclick="copyTab(this)">sohne</code></td>
-      <td><span style="font-family:sohne;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:sohne;"></input></td>
     </tr>
 
     <tr>
       <td><code onclick="copyTab(this)">chirp_r</code></td>
-      <td><span style="font-family:chirp_r;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:chirp_r;"></input></td>
     </tr>
 
     <tr>
       <td><code onclick="copyTab(this)">chirp_m</code></td>
-      <td><span style="font-family:chirp_m;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, aliquid?</span></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:chirp_m;"></input></td>
     </tr>
 
     <tr>
       <td><code onclick="copyTab(this)">appletc</code></td>
-      <td><span style="font-family:appletc;">通教育丑低快尖草,哥当支的反承上天币榜太，报谢量落厅时人的同躲尝，瞠仓。</span></td>
+      <td><input type="text" placeholder="通教育丑低草快尖。" style="font-family:appletc;"></input></td>
     </tr>
 
   </table>
