--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </pre>
 </div>
 
-<p><a href="portfolio.zhoulingyu.net">portfolio></a><br>
+<p><a href="https://portfolio.zhoulingyu.net">portfolio></a><br>
     <a href="proj.html">projects></a><br>
     <a href="gall.html">gallery></a><br>
     <a href="fg2.html">font studio></a><br>
