--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <body style="text-align: center; background-color: rgb(230,230,230); font-family: 'Schibsted Grotesk'; font-weight: 500; text-transform: uppercase;">
     <div style=" display: inline-block;  width: 40vh; background-color: white; margin-top: 18vh;">
         <div style="height: 38vh;width:  38vh; margin-left: 1vh; margin-top: 1vh; background-color: #404;"></div>
-        <p title="Lingyu named it!" style="text-align: left; font-size: x-large; margin-left: 3vh;"><span id="click" onclick="updateSpan()">#404</span><br>"Blackberry"</p>
+        <p title="I named it!" style="text-align: left; font-size: x-large; margin-left: 3vh;"><span id="click" onclick="updateSpan()">#404</span><br>"Mulberry"</p>
     </div>
     <a href="javascript:history.back()" style="text-decoration: none; position: fixed; right: 5%; bottom:5%; background-color: #404; color:white; border-radius: 50%; width: 100px; height: 100px; line-height: 100px;">RETRACE</a>
 <script>
