--- a/fontcss.html
+++ b/fontcss.html
@@ -235,6 +235,31 @@ Then refer to the preview below for your preferred fonts and use corresponding a
     </tr>
 
     <tr>
+      <td><code onclick="copyTab(this)">humanbby</code></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:humanbby;"></input></td>
+    </tr>
+
+    <tr>
+      <td><code onclick="copyTab(this)">geist</code></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:geist;"></input></td>
+    </tr>
+
+    <tr>
+      <td><code onclick="copyTab(this)">fira</code></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:fira;"></input></td>
+    </tr>
+
+    <tr>
+      <td><code onclick="copyTab(this)">firamono</code></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:firamono;"></input></td>
+    </tr>
+
+    <tr>
+      <td><code onclick="copyTab(this)">aptos</code></td>
+      <td><input type="text" placeholder="The quick brown fox jumps over the lazy dog." style="font-family:aptos;"></input></td>
+    </tr>
+
+    <tr>
       <td><code onclick="copyTab(this)">appletc</code></td>
       <td><input type="text" placeholder="通教育丑低草快尖。" style="font-family:appletc;"></input></td>
     </tr>
