--- a/splice.html
+++ b/splice.html
@@ -43,10 +43,10 @@
         background: #000;
         color: white; /* Text color */
         margin: 0px;
-        padding:1vh 0vh 5vh;
+        padding:5vh 10vw;
         text-align: center; /* Align text to the center */
-        width: 100%;
-        min-height: 30vh;
+        /* width: 100%; */
+        /* min-height: 10vh; */
     }
     </style>
 
@@ -67,8 +67,15 @@
     <!-- <br><p style="text-align: center;"><a style="color:inherit " href="javascript:scroll(0,0)">&uarr; TOP</a></p> -->
         </div>
 
-        <footer class="grad"></footer>
-        <footer>
+        <footer class="grad">
+        </footer>
+        <footer style="display: flex;">
+<div style="margin: auto auto auto 1vw; text-align: left;font-size: small;">
+    terms and conditions<br>
+    privacy policy<br>
+    report problems<br>
+    site map</br>
+</div>
         </footer>
 </body>
 
