--- a/mkdocs/site/index.html
+++ b/mkdocs/site/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/theme.css" />
     <link rel="stylesheet" href="css/theme_extra.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" />
+        <link href="docs/css/es.css" rel="stylesheet" />
     
       <script>
         // Current page data
@@ -152,5 +153,5 @@
 
 <!--
 MkDocs version : 1.6.0
-Build Date UTC : 2024-06-28 01:02:48.092682+00:00
+Build Date UTC : 2024-06-28 01:34:28.493018+00:00
 -->
